# simple-pascal-compiler

./: .gitignore  CMakeLists.txt  README.md
doc/: doxygen.config
doc/markdown/: Summary.md  Test.md
src/: main.cpp  parse.y  scan.l
src/ast/: ast_base.cpp  ast_base.h  type_nodes.cpp
src/codegen/: codegen_context.hpp  const_value_nodes.cpp  decl_list_nodes.cpp  expr_nodes.cpp  identifier_node.cpp  routine_call_nodes.cpp  routine_nodes.cpp  stmt_nodes.cpp  symbol.cpp  symbol.h  sys_routine_nodes.cpp  type_nodes.cpp
src/utils/: ast.hpp  ast_utils.hpp
test/: array.pas  book_struct.pas  hello.pas  math.pas  quickSort.pas
